[package]
name = "wascc-codec"
version = "0.9.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
description = "Shared primitives used by the waSCC host runtime and capability providers"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-codec"
readme = "README.md"
keywords = ["webassembly", "wasm", "codec", "wascc"]
categories = ["wasm", "data-structures","encoding"]
homepage = "https://wascc.dev"

[badges]
maintenance = { status = "actively-developed"}

[dependencies]
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde_bytes = "0.11.5"
rmp-serde = "0.14.4"

[dev-dependencies]
structopt = "0.3.17"
serde_json = "1.0.57"
base64 = "0.12.3"

